#include "Name.h"
#include "iostream"

using namespace std;

class Name
{
private:
	string* name[20];
	double longitude;
	double latitude;

public:

	Name(string* namesRef[])
	{

	}

};


